Fixed a stupid error to prevent it from showing up

--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
 	</div>
 	<div id="buttonTemplate" style="display: none;">
 		<div class="col-sm-2">
-			<button id="%ID%Button" onclick="playTrack('%ID%', %START%)" class="btn btn-lg btn-block">%TITLE%&nbsp;
+			<button id="%ID%Button" onclick="playTrack('%ID%', START)" class="btn btn-lg btn-block">%TITLE%&nbsp;
 				<span id="%ID%Volume"></span>
 			</button>
 		</div>
