First commit on branch electron

--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
 		</div>
 	</div>
 	<script src="js/lib/jquery-3.2.1.min.js"></script>
-	<script src="js/main.js"></script>
+	<script src="js/soundcontrol.js"></script>
 </body>
 
 </html>
