First working Electron version

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 
 	<div class="audioControls row">
 		<div class="col-sm-12">
-			<h1 class="text-center">Music Fade</h1>
+			<h2 class="text-center">Music Fade</h2>
 		</div>
 		<div class="col-sm-4">
 			<button id="slowFade" class="btn btn-block btn-sm btn-secondary fadeButton">Slow</button>
@@ -29,9 +29,9 @@
 		</div>
 	</div>
 
-	<div id="buttonHolder" class="row">
+	<div class="row" id="buttonHolder">
 		<div class="col-sm-12">
-			<h1 class="text-center">Background Audio</h1>
+			<h2 class="text-center">Background Audio</h2>
 		</div>
 	</div>
 
