--- a/index.html
+++ b/index.html
@@ -49,6 +49,7 @@
 	</div>
 	<script>if (typeof module === 'object') {window.module = module; module = undefined;}</script>
 	<script src="js/lib/jquery-3.2.1.min.js"></script>
+	<script src="js/ini.js"></script>
 	<script src="js/soundcontrol.js"></script>
 	<script>if (window.module) module = window.module;</script>
 </body>
