--- a/index.html
+++ b/index.html
@@ -10,26 +10,37 @@
 </head>
 
 <body class="container">
-	
+
 	<div id="audioHolder">
 	</div>
 
-	<div class="audioControls row">
-		<div class="col-sm-12">
-			<h2 class="text-center">Music Fade</h2>
+	<div class="audioControls row holder" style="display:none;">
+		<div class="col-sm-6">
+			<div class="row">
+				<div class="col-sm-12">
+					<h2 class="text-center">Soundboard Controls</h2>
+				</div>
+			</div>
 		</div>
-		<div class="col-sm-4">
-			<button id="slowFade" class="btn btn-block btn-sm btn-secondary fadeButton">Slow</button>
-		</div>
-		<div class="col-sm-4">
-			<button id="mediumFade" class="btn btn-block btn-sm btn-primary fadeButton">Medium</button>
-		</div>
-		<div class="col-sm-4">
-			<button id="fastFade" class="btn btn-block btn-sm btn-secondary fadeButton">Fast</button>
+		<div class="col-sm-6">
+			<div class="row divider">
+				<div class="col-sm-12">
+					<h2 class="text-center">Music Fade</h2>
+				</div>
+				<div class="col-sm-4">
+					<button id="slowFade" class="btn btn-block btn-sm btn-secondary fadeButton">Slow</button>
+				</div>
+				<div class="col-sm-4">
+					<button id="mediumFade" class="btn btn-block btn-sm btn-primary fadeButton">Medium</button>
+				</div>
+				<div class="col-sm-4">
+					<button id="fastFade" class="btn btn-block btn-sm btn-secondary fadeButton">Fast</button>
+				</div>
+			</div>
 		</div>
 	</div>
 
-	<div class="row" id="buttonHolder">
+	<div id="buttonHolder" class="row holder" style="display:none;">
 		<div class="col-sm-12">
 			<h2 class="text-center">Background Audio</h2>
 		</div>
@@ -47,7 +58,7 @@
 			</button>
 		</div>
 	</div>
-	<script>if (typeof module === 'object') {window.module = module; module = undefined;}</script>
+	<script>if (typeof module === 'object') { window.module = module; module = undefined; }</script>
 	<script src="js/lib/jquery-3.2.1.min.js"></script>
 	<script src="js/ini.js"></script>
 	<script src="js/soundcontrol.js"></script>
