--- a/index.html
+++ b/index.html
@@ -20,6 +20,24 @@
 				<div class="col-sm-12">
 					<h2 class="text-center">Soundboard Controls</h2>
 				</div>
+				<div class="col-sm-6">
+					<div class="dropdown">
+						<button id="filename" type="button" class="btn btn-sm btn-block btn-outline-light dropdown-toggle" data-toggle="dropdown">
+
+						</button>
+						<div id="recentFiles" class="dropdown-menu text-center" style="width: 100%">
+							<a class="dropdown-item" href="#">Link 1</a>
+							<a class="dropdown-item" href="#">Link 2</a>
+							<a class="dropdown-item" href="#">Link 3</a>
+						</div>
+					</div>
+				</div>
+				<div class="col-sm-3">
+				<button type="button" class="btn btn-sm btn-block btn-secondary"><i class="fas fa-save"></i>&nbsp;Save</button>
+				</div>
+				<div class="col-sm-3">
+					<button type="button" class="btn btn-sm btn-block btn-secondary"><i class="fas fa-folder-open"></i>&nbsp;Load</button>
+				</div>
 			</div>
 		</div>
 		<div class="col-sm-6">
@@ -60,6 +78,7 @@
 	</div>
 	<script>if (typeof module === 'object') { window.module = module; module = undefined; }</script>
 	<script src="js/lib/jquery-3.2.1.min.js"></script>
+	<script src="js/lib/bootstrap.bundle.min.js"></script>
 	<script src="js/ini.js"></script>
 	<script src="js/soundcontrol.js"></script>
 	<script>if (window.module) module = window.module;</script>
