Preparation for saving and loading is all done

--- a/index.html
+++ b/index.html
@@ -30,10 +30,10 @@
 					</div>
 				</div>
 				<div class="col-sm-3">
-				<button type="button" class="btn btn-sm btn-block btn-secondary"><i class="fas fa-save"></i>&nbsp;Save</button>
+					<button id="saveButton" type="button" class="btn btn-sm btn-block btn-secondary"><i class="fas fa-save"></i>&nbsp;Save As</button>
 				</div>
 				<div class="col-sm-3">
-					<button type="button" class="btn btn-sm btn-block btn-secondary"><i class="fas fa-folder-open"></i>&nbsp;Load</button>
+					<button id="loadButton" type="button" class="btn btn-sm btn-block btn-secondary"><i class="fas fa-folder-open"></i>&nbsp;Load</button>
 				</div>
 			</div>
 		</div>
