We can now change button color!

--- a/index.html
+++ b/index.html
@@ -81,6 +81,7 @@
 			<li class="cmenu-link" id="removeButton"><a href="#"><i class="fas fa-trash-alt"></i>&nbsp;Remove Button</a></li>
 		</ul>
 	</div>
+	<input type="color" id="colorPicker">
 	<script>if (typeof module === 'object') { window.module = module; module = undefined; }</script>
 	<script src="js/lib/jquery-3.2.1.min.js"></script>
 	<script src="js/lib/bootstrap.bundle.min.js"></script>
