Reworked file paths, to not need to be in the data dir. Also working on changing music files

--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
 
 	<div id="audioTemplate" style="display: none;">
 		<audio loop id="%ID%Sound">
-			<source file="data/%FILE%" preload="auto">
+			<source file="%FILE%" preload="auto">
 		</audio>
 	</div>
 	<div id="buttonTemplate" style="display: none;">
