--- a/index.html
+++ b/index.html
@@ -42,15 +42,21 @@
 				<div class="col-sm-12">
 					<h2 class="text-center">Music Fade</h2>
 				</div>
-				<div class="col-sm-4">
+				<div class="col-sm-3">
 					<button id="slowFade" class="btn btn-block btn-sm btn-secondary fadeButton">Slow</button>
 				</div>
-				<div class="col-sm-4">
+				<div class="col-sm-3">
 					<button id="mediumFade" class="btn btn-block btn-sm btn-primary fadeButton">Medium</button>
 				</div>
-				<div class="col-sm-4">
+				<div class="col-sm-3">
 					<button id="fastFade" class="btn btn-block btn-sm btn-secondary fadeButton">Fast</button>
 				</div>
+				<div class='col-sm-3'>
+					<div class='checkbox'>
+						<label class='checkbox-inline'><input id='rc' type='checkbox' class='form-control'>&nbsp;Remote Control</label>
+					</div>
+				</div>
+
 			</div>
 		</div>
 	</div>
